--- a/HalloDoc Project/Views/Admin/ToCloseTable.cshtml
+++ b/HalloDoc Project/Views/Admin/ToCloseTable.cshtml
@@ -1,5 +1,5 @@
 ﻿@model AdminDashboardViewModel
-<div class="table-responsive rounded mt-3">
+<div class=" rounded mt-3">
     <table class="table d-md-block d-none">
         <colgroup>
             <col span="1" style="width: 17%;">
