--- a/HalloDoc Project/Views/Admin/NewTable.cshtml
+++ b/HalloDoc Project/Views/Admin/NewTable.cshtml
@@ -169,6 +169,22 @@
         </tbody>
     </table>
 
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            @if (Model.currentPage > 1)
+            {
+                
+            <li class="page-item"><button type="button" onclick="loadPreviousPage(@Model.currentPage)" id="" class="page-link" href="#">Previous</button></li>
+            }
+            <li class="page-item"><span class="page-link" href="#">@Model.currentPage</span></li>
+            @if (Model.currentPage != (int)Math.Ceiling((double)20 / 5))
+            {
+                <li class="page-item"><button type="button" onclick="loadNextPage(@Model.currentPage)" class="page-link" id="">Next</button></li>
+
+            }
+        </ul>
+    </nav>
+
     @* ---------------------------------------------------------------------------- *@
 
     @* accordion *@
